# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//build/lite/config/test.gni")
import("//kernel/liteos_a/testsuites/unittest/config.gni")

common_include_dirs = [
  "//third_party/googletest/googletest/include",
  "../common/include",
]

sources_entry = [ "../common/osTest.cpp" ]

sources_smoke = []

sources_full = []

# dynload module
if (LOSCFG_USER_TEST_DYNLOAD == true) {
  import("./dynload/config.gni")
  common_include_dirs += dynload_include_dirs
  sources_entry += dynload_sources_entry
  sources_smoke += dynload_sources_smoke
  sources_full += dynload_sources_full
}

# exc module
if (LOSCFG_USER_TEST_EXC == true) {
  import("./exc/config.gni")
  common_include_dirs += exc_include_dirs
  sources_entry += exc_sources_entry
  sources_smoke += exc_sources_smoke
  sources_full += exc_sources_full
}

# mem module
if (LOSCFG_USER_TEST_MEM_SHM == true) {
  import("./mem/shm/config.gni")
  common_include_dirs += mem_shm_include_dirs
  sources_entry += mem_shm_sources_entry
  sources_smoke += mem_shm_sources_smoke
  sources_full += mem_shm_sources_full
}

if (LOSCFG_USER_TEST_MEM_VM == true) {
  import("./mem/vm/config.gni")
  common_include_dirs += mem_vm_include_dirs
  sources_entry += mem_vm_sources_entry
  sources_smoke += mem_vm_sources_smoke
  sources_full += mem_vm_sources_full
}
